--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -42,10 +42,13 @@
     "btc_placeholder": "Valor em BTC",
     "usdt_placeholder": "Valor em USDT",
     "eur_placeholder": "Digite o valor em EUR",
+    "ars_placeholder": "Digite o valor em ARS",
+    "ars_label": "Peso Argentino",
     "proceed_button": "Prosseguir",
     "transaction_error": "Transações só são permitidas todos os dias, das 8h às 22h no horário de Brasília.",
     "min_value_error": "O valor mínimo para transações com Bitcoin é de R$ 25,00 na rede Lightning e R$ 200,00 nas demais rede.",
     "min_value_error_usdt": "O valor mínimo para compra em USDT é 500 BRL.",
+    "min_value_error_lightning_ars": "O valor mínimo para Lightning em ARS é ARS 3.000",
     "wallet_error_below_700": "Para valores abaixo de 700 BRL, apenas carteiras Liquid e Lightning são permitidas.",
     "payment_error_above_5000": "Para pagamentos via Pix acima de 5.000 BRL, entre em contato com nosso suporte via WhatsApp.",
     "first_purchase_limit_error": "Sua primeira compra está limitada a 500 BRL.",
