--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -326,6 +326,10 @@
       "expected_amount": "Valor Esperado (BRL)",
       "expected_amount_crypto": "Valor Esperado (Cripto)"
     },
+    "wallet_confirmation": {
+      "title": "Confirmação de Endereço",
+      "checkbox_label": "Eu confirmo que o endereço está correto:"
+    },
     "buttons": {
       "cancel": "Cancelar",
       "confirm": "Confirmar"
