--- a/src/domain/locales/pt/translation.json
+++ b/src/domain/locales/pt/translation.json
@@ -211,7 +211,7 @@
     "invalidColdWalletErrorLiquid": "Endereço da carteira Liquid inválido. Verifique se o endereço está correto e tente novamente.",
     "invalidColdWalletErrorOnchain": "Endereço da carteira Onchain inválido. Use um endereço Bitcoin válido (bc1... ou 1... ou 3...).",
     "invalidColdWalletErrorLightning": "Endereço da carteira Lightning inválido. Use apenas um LNURL ou um e-mail Lightning válido.",
-    "invalidLnurl": "LNURL inválido. Verifique o endereço e tente novamente.",
+    "invalidLnurl": "LNURL não suportado, use o formato de email Lightning.",
     "invalidLnurlResponse": "Resposta inválida do servidor LNURL.",
     "fixedAmountLnurlNotSupported": "LNURLs com valor fixo não são suportados. Use um LNURL que permita valores personalizados.",
     "lightningInvoiceNotSupported": "Faturas Lightning (bolt11) não são mais suportadas. Use apenas LNURL ou e-mail Lightning.",
@@ -325,6 +325,10 @@
       "title": "Resumo Final",
       "expected_amount": "Valor Esperado (BRL)",
       "expected_amount_crypto": "Valor Esperado (Cripto)"
+    },
+    "wallet_confirmation": {
+      "title": "Confirmação de Endereço",
+      "checkbox_label": "Eu confirmo que o endereço está correto:"
     },
     "buttons": {
       "cancel": "Cancelar",
